fix: author name being cut off after certain width eveh tho more space is available

--- a/src/components/Note/NoteAuthorList/NoteAuthorList.scss
+++ b/src/components/Note/NoteAuthorList/NoteAuthorList.scss
@@ -93,7 +93,6 @@ $max-name-length: 112px;
   color: $color-dark-gray;
   font-size: $text--xs;
   letter-spacing: $letter-spacing--small;
-  max-width: $max-name-length;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
